@@ -22,6 +22,9 @@ NEW FEATURES
     o compare_columns() utility: Compare two 1d numeric vectors using the
       comparison metrics from compare_motifs().
 
+    o compare_motifs() option: 'output.report'. Generate an output report when
+      'compare.to' is provided, showing motif alignments of top matches.
+
     o get_scores() utility: Extract all possible scores from a motif.
 
     o filter_motifs(): Filter using the 'extrainfo' slot.
